# libaroma

./: .gitignore  AUTHORS  Android.mk  CMakeLists.txt  README.md  android.toolchain.cmake  build-config.ini  build.sh  index.html  libaroma.code-workspace  params.json  win32-linaro-arm-toolchain.cmake
examples/: libaroma_test.c  libaroma_test_graphonly.c
examples/mods/: bar_test.c  common_test.c  tab_test.c
examples/recovery/: recovery.c  recovery.h  recovery_libs.c  recovery_mainmenu.c  recovery_usb.c
examples/recovery/res/: libaroma_test
examples/rt_test/: app-template-2.nut  app-templete.txt  libaroma_squirrel.c  libaroma_squirrel.h  libaroma_squirrel_app.c  libaroma_squirrel_internal.h  libaroma_squirrel_utils.c  main.nut  main_app.nut  rt_test.c  test.nut  worker-template.nut
include/: aroma.h  aromart.h
include/aroma/: api.h  core.h  debug.h  defs.h  graph.h  sys.h  types.h  ui.h  utils.h
include/aroma/controls/: ctl_bar.h  ctl_button.h  ctl_fragment.h  ctl_image.h  ctl_label.h  ctl_list.h  ctl_progress.h  ctl_scroll.h
include/aroma/graph/: artworker.h  canvas.h  draw.h  engine.h  fb.h  image.h  jpeg.h  png.h  svg.h  text.h
include/aroma/hid/: hid.h  messages.h
include/aroma/ui/: color_manager.h  control.h  controls.h  dialog.h  hid.h  messages.h  motions.h  window.h  window_manager.h
include/aroma/utils/: array.h  json.h  minutf8.h  motions.h  stream.h  strings.h  system.h  time.h  zip.h
include/aromart/: aromart_core.h
libs/freetype/: Android.mk  CMakeLists.txt
libs/freetype/include/config/: ftoption.h
libs/freetype/include/freetype/config/: ftmodule.h  ftoption.h  ftstdlib.h
libs/harfbuzz-ng/: Android.mk  CMakeLists.txt
libs/harfbuzz-ng/src/hb-ucdn/: CMakeLists.txt
libs/jpeg/: Android.mk  CMakeLists.txt  jddctmgr.c  jmem-android.c  jsimd_neon.c  jsimd_neon.h
libs/jpeg-turbo/: Android.mk  jcinit.c  jconfig.h  jdhuff.c  jdphuff.c  jmemsys.h
libs/jpeg-turbo/simd/: Makefile.in  jccolor-mmx.lo  jccolor-sse2.lo  jcgray-mmx.lo  jcgray-sse2.lo  jcsample-mmx.lo  jcsample-sse2.lo  jdcolor-mmx.lo  jdcolor-sse2.lo  jdmerge-mmx.lo  jdmerge-sse2.lo  jdsample-mmx.lo  jdsample-sse2.lo  jfdctflt-3dn.lo  jfdctflt-sse.lo  jfdctfst-mmx.lo  jfdctfst-sse2.lo  jfdctint-mmx.lo  jfdctint-sse2.lo  jidctflt-3dn.lo  jidctflt-sse.lo  jidctflt-sse2.lo  jidctfst-mmx.lo  jidctfst-sse2.lo  jidctint-mmx.lo  jidctint-sse2.lo  jidctred-mmx.lo  jidctred-sse2.lo  jquant-3dn.lo  jquant-mmx.lo  jquant-sse.lo  jquantf-sse2.lo  jquanti-sse2.lo  jsimd_i386.lo  jsimdcpu.lo
libs/minzip/: Android.mk  Bits.h  CMakeLists.txt  DirUtil.c  DirUtil.h  Hash.c  Hash.h  Log.h  SysUtil.c  SysUtil.h  Zip.c  Zip.h  safe_iop.h
libs/png/: Android.mk  CMakeLists.txt  pngread.c  pngrutil.c
libs/squirrel/: CMakeLists.txt
libs/squirrel/doc/: sqstdlib3.chw  squirrel3.chw
libs/squirrel/include/: squirrel.h
libs/zlib/: CMakeLists.txt
libs/zlib/src/contrib/minizip/: minizip.c
src/: aroma.c  aroma_internal.h  aroma_memory.h  config.h  config_features.h  fallback.h  fallbacks.h  memory.h  syscall.h
src/aroma/: api.c  aroma.c  core.c  graph.c  internal.h  ui.c  utils.c  version.c
src/aroma/controls/: ctl_bar.c  ctl_button.c  ctl_fragment.c  ctl_image.c  ctl_label.c  ctl_list.c  ctl_pager.c  ctl_progress.c  ctl_scroll.c  ctl_tabs.c
src/aroma/debug/: compiler_message.c  debug.h  memory_tracking.c
src/aroma/graph/: artworker.c  canvas.c  draw.c  engine.c  fb.c  image.c  jpeg.c  png.c  svg.c  text.c
src/aroma/hid/: hid.c  messages.c
src/aroma/ui/: artworker.c  color_manager.c  control.c  controls.c  dialog.c  hid.c  messages.c  motions.c  ui_internal.h  window.c  window_layer.c  window_manager.c
src/aroma/utils/: array.c  json.c  minutf8.c  motions.c  runtime.c  stream.c  strings.c  system.c  time.c  zip.c
src/aromart/: aromart_app.c  aromart_core.c  aromart_driver.c  aromart_internal.h  aromart_messaging.c  aromart_sysui.c
src/contrib/android/: android.h
src/contrib/arm_neon/: alpha_neon.c  arm_neon.h  arm_neon_alpha.h  arm_neon_blt.h  arm_neon_color.h  arm_neon_dither.h  blt_neon.c  color_neon.c  dither_neon.c
src/contrib/linux/: fb_driver.c  fb_driver.h  hid_driver.c  linux_syscall.c  linux_syscall.h
src/contrib/openmp/: openmp.h
src/contrib/qnx/: fb_driver.c  hid_driver.c  qnx_hiddi_driver.c  qnx_hiddi_driver.h
src/contrib/rpi/: fb_driver.c
src/contrib/sse/: neon2sse.h  sse_neon.h  sse_neon_alpha.h  sse_neon_blt.h  sse_neon_color.h  sse_neon_dither.h
src/contrib/x86/: i386.h
src/contrib/x86_sse/: x86_sse.h  x86_sse_alpha.h  x86_sse_blt.h  x86_sse_color.h  x86_sse_dither.h
tools/linux-x86/: build.sh  envsetup.sh
tools/linux-x86-v2/: envsetup.sh
tools/linux-x86-v2/libs/: build_libaroma.sh  build_sqlite.sh  makelibs.sh  makelibs_freetype.sh  makelibs_hb.sh  makelibs_hbucdn.sh  makelibs_jpeg.sh  makelibs_minzip.sh  makelibs_png.sh  makelibs_zlib.sh
tools/linux-x86/libs/: makelibs_freetype.sh  makelibs_jpeg.sh  makelibs_png.sh
tools/linux/libs/: makelibs_minzip.sh  makelibs_png.sh
tools/test/: libaroma_test.c
tools/test/mods/: bar_test.c  common_test.c  tab_test.c
tools/win32/: .gitignore  build_libaroma-debug.bat  build_libaroma.bat  build_libaroma_rt.bat  build_test-debug.bat  build_test-fb-release.bat  build_test-fb.bat  build_test.bat  deploy_gdb.bat  deploy_recovery.bat  envsetup-ndk-sa.bat  envsetup-ndk.bat  envsetup.bat  envsetup_debug.bat  libaroma-linaro-arm-toolchain.cmake
tools/win32/ftthread/: build.bat  ftthread.c  push.bat
tools/win32/graphonly/: CMakeLists.txt  build-linux  build.bat  deploy_android.bat  deploy_gdb.bat  deploy_gdb_android.bat  libaroma_test
tools/win32/libaroma/: alignblt.i  alignblt.s  alpha.i  alpha.s  aroma.i  aroma.s  array.i  array.s  artworker.i  artworker.s  blt.i  blt.s  blur.i  blur.s  canvas.i  canvas.s  color.i  color.s  color_manager.i  color_manager.s  commondraw.i  commondraw.s  (+98 more)
tools/windows_build/: build.bat  build_clean.bat  build_envsetup.bat  build_libaroma.bat  build_test.bat  build_test_upload.bat  debug_build_test.bat  deploy_gdb.bat  deploy_gdb_android.bat  envsetup.bat  upload.bat
(+175 files in other folders)
